fix contrast

--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -67,7 +67,7 @@ $arrow-height: 24px;
 }
 
 .crt-button--large {
-  color: color('white');
+  color: color('white') !important;
   font-weight: bold !important;
   margin-top: 0.5rem;
   padding: 1rem 2rem;
@@ -77,16 +77,20 @@ $arrow-height: 24px;
   }
 
   &.usa-button--outline {
-    color: #162e51;
+    color: #162e51 !important;
     box-shadow: inset 0 0 0 2px #162e51;
 
     &:hover {
       box-shadow: inset 0 0 0 2px #2378c3;
+      color: #2378c3 !important;
     }
-  }
 
-  &.usa-button--outline:visited {
-    color: #162e51;
+    &:visited {
+      color: #162e51  !important;
+      &:hover {
+        color: #2378c3 !important;
+      }
+    }
   }
 
   &:hover {
